--- a/NewsBot.ipynb
+++ b/NewsBot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn2yflmEiugkjuzbSCtShy",
+      "authorship_tag": "ABX9TyM44b2x+dd/zVqChVhx6qgh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3825,10 +3825,12 @@
         "!pip -q install datasets\n",
         "!pip -q install sentence_transformers\n",
         "!pip -q install faiss-cpu\n",
+        "!pip -q install faiss-gpu\n",
         "!pip -q install langchain\n",
         "!pip -q install langchain_community\n",
         "!pip -q install evaluate\n",
-        "!pip -q install rouge_score"
+        "!pip -q install rouge_score\n",
+        "!pip -q install bert_score"
       ],
       "metadata": {
         "collapsed": true,
@@ -3839,9 +3841,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip -q install bert_score"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3873,6 +3873,8 @@
         "import matplotlib.pyplot as plt\n",
         "import matplotlib\n",
         "import tensorflow as tf\n",
+        "import json\n",
+        "import glob\n",
         "\n",
         "\n",
         "from datasets import Dataset\n",
@@ -3896,7 +3898,7 @@
       "metadata": {
         "id": "5Dy51fzkZ-p_"
       },
-      "execution_count": 128,
+      "execution_count": 223,
       "outputs": []
     },
     {
@@ -5680,7 +5682,7 @@
         "def eval(queries, k_retrieved, top_matches):\n",
         "\n",
         "  responses = [answer_with_rag(query, BASE_MODEL, KNOWLEDGE_INDEX, k_retrieved, top_matches) for query in queries]\n",
-        "  predictions = [prediction[0].split('<|assistant|>\\n')[-1] for prediction in responses]\n",
+        "  predictions = [prediction[0].split('<|assistant|>\\n')[-1].split('\\n\\nReferences:')[0] for prediction in responses]\n",
         "  refs = [reference[1] for reference in responses]\n",
         "  references = ['Article: '.join([i.page_content + str(i.metadata) for i in ref]) for ref in refs]\n",
         "\n",
@@ -5689,18 +5691,7 @@
       "metadata": {
         "id": "vkBm4-gj9--A"
       },
-      "execution_count": 124,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "predictions, references = eval(eval_queries, 8, 4)"
-      ],
-      "metadata": {
-        "id": "VuF80xe4-fk9"
-      },
-      "execution_count": 165,
+      "execution_count": 216,
       "outputs": []
     },
     {
@@ -6232,10 +6223,239 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In this section another LLM will grade and evaluate the RAG model with different parameters."
+      ],
+      "metadata": {
+        "id": "nPBAYvnPyTQv"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "judge_llm = Model.META.value # 'meta-llama/Meta-Llama-3-8B-Instruct'\n",
+        "\n",
+        "JUDGE_MODEL = HuggingFaceHub(\n",
+        "    repo_id=judge_llm,\n",
+        "    task=\"text-generation\",\n",
+        "    model_kwargs={\n",
+        "        \"max_new_tokens\": 512,\n",
+        "        \"top_k\": 30,\n",
+        "        \"temperature\": 0.8,\n",
+        "        \"repetition_penalty\": 1.05,\n",
+        "    },\n",
+        ")"
+      ],
       "metadata": {
         "id": "Br0c21-9arNm"
+      },
+      "execution_count": 207,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PROMPT = \"\"\"\n",
+        "###Task:\n",
+        "Using the given question, answer and references, assign a SINGLE score\n",
+        "from 1 to 100 to the answer and provide insights for your rating as a text.\n",
+        "Please always follow the format given below.\n",
+        "The score should be based on the following criteria:\n",
+        "\n",
+        "1. Comprehensiveness of the answer (to which extend was the question answered) considering the limited knowledge (references).\n",
+        "2. Accuracy of the provided references at the end (Does the answer provide sources in apa-style? Does it contain a valid link?).\n",
+        "\n",
+        "Your response should precisely follow this format:\n",
+        "\"[SCORE]: {{your score}}[REASONING]: {{reasoning for the score}}\"\n",
+        "\n",
+        "Be sure to always include [SCORE] in your response!\n",
+        "\n",
+        "###Now here is the question:\n",
+        "{question}\n",
+        "\n",
+        "###Here is the answer:\n",
+        "{answer}\n",
+        "\n",
+        "###And here are the references:\n",
+        "{references}\n",
+        "\n",
+        "###Your response:\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "lU31C0qayICt"
+      },
+      "execution_count": 208,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def score(queries, llm, k_retrieved, top_matches):\n",
+        "\n",
+        "  print(\"Running RAG...\")\n",
+        "\n",
+        "  predictions, references = eval(queries, k_retrieved, top_matches)\n",
+        "\n",
+        "  scores = []\n",
+        "  results = []\n",
+        "\n",
+        "  print(\"Running evaluation...\")\n",
+        "\n",
+        "  for i, query in enumerate(queries):\n",
+        "    question = query\n",
+        "    answer = predictions[i]\n",
+        "    reference = references[i]\n",
+        "\n",
+        "    template = PROMPT.format(question=question, answer=answer, references=reference)\n",
+        "    result = llm(template)\n",
+        "\n",
+        "    response = result.split('###Your response:')[-1]\n",
+        "    score = response.split('[SCORE]')[-1].split('[REASONING]')[0]\n",
+        "    scores.append(score)\n",
+        "    results.append(response)\n",
+        "\n",
+        "  s = [i.replace('.', ' ').replace(':', ' ').replace('[', ' ').replace(']', ' ').split() for i in scores]\n",
+        "  flat_s = [item for sublist in s for item in sublist]\n",
+        "  final = [int(x) for x in flat_s if x.isdigit() and int(x) <= 100]\n",
+        "  overall = sum(final) / len(final)\n",
+        "\n",
+        "  # assuming the same queries as in the previous section:\n",
+        "  rouge = load('rouge')\n",
+        "  bertscore = load(\"bertscore\")\n",
+        "\n",
+        "  rouge_results = rouge.compute(predictions=predictions, references=eval_df['GPT'], use_aggregator=False)\n",
+        "  bertscore_results = bertscore.compute(predictions=predictions, references=eval_df['GPT'], lang=\"en\")\n",
+        "\n",
+        "  if not os.path.exists(\"drive/MyDrive/evaluation_results\"):\n",
+        "      os.mkdir(\"drive/MyDrive/evaluation_results\")\n",
+        "      print(\"Creating path...\")\n",
+        "\n",
+        "  output_file_name = f\"drive/MyDrive/evaluation_results/rag_retrieved-{k_retrieved}-top-{top_matches}.json\"\n",
+        "\n",
+        "  try:\n",
+        "        with open(output_file_name, \"r\") as f:\n",
+        "            outputs = json.load(f)\n",
+        "            print(\"Found existing file...\")\n",
+        "  except:\n",
+        "      outputs = []\n",
+        "      print(\"Did not find file, creating it...\")\n",
+        "  result = {\n",
+        "      \"k-retrieved\": k_retrieved,\n",
+        "      \"k-top\": top_matches,\n",
+        "      \"scores\": f\"{final}\",\n",
+        "      \"overall\": overall,\n",
+        "      \"rouge\": f\"{rouge_results}\",\n",
+        "      \"bertscore\": f\"{bertscore_results}\",\n",
+        "  }\n",
+        "  outputs.append(result)\n",
+        "\n",
+        "  with open(output_file_name, \"w\") as f:\n",
+        "    json.dump(outputs, f)"
+      ],
+      "metadata": {
+        "id": "RbIp99Wwyxr4"
+      },
+      "execution_count": 222,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Looping over various combinations of retrieved articles and top matches within\n",
+        "retrieved_k = [1, 10, 20]\n",
+        "top_k = [1, 3, 5]\n",
+        "for k in retrieved_k:\n",
+        "  for t in top_k:\n",
+        "    if t > k:\n",
+        "      continue\n",
+        "      print(\"Skipped\")\n",
+        "    print(f\"Round {k} {t}\")\n",
+        "    score(eval_queries, JUDGE_MODEL, k, t)"
+      ],
+      "metadata": {
+        "id": "k0FpPsy13NuN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Displaying Results"
+      ],
+      "metadata": {
+        "id": "GR-tkblj39hb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "evaluations = []\n",
+        "for file in glob.glob(\"drive/MyDrive/evaluation_results/*.json\"):\n",
+        "    eval = pd.DataFrame(json.load(open(file, \"r\")))\n",
+        "    eval[\"settings\"] = file\n",
+        "    evaluations.append(eval)\n",
+        "outcome = pd.concat(evaluations)"
+      ],
+      "metadata": {
+        "id": "TtkIu92o34U8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "outcome['id'] = \"k-retrieved: \" + outcome['k-retrieved'].astype(str) + \" - k-top: \" + outcome['k-top'].astype(str)\n",
+        "outcome[['k-retrieved', 'k-top', 'scores', 'overall', 'id']]"
+      ],
+      "metadata": {
+        "id": "M3_mlTp64WqY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = pd.Series(outcome.overall.sort_values().values, index=outcome['id'].sort_values().values)"
+      ],
+      "metadata": {
+        "id": "kAfSMryJ4sxI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = px.bar(\n",
+        "    scores,\n",
+        "    color=scores,\n",
+        "    labels={\n",
+        "        \"value\": \"Accuracy\",\n",
+        "        \"settings\": \"Configuration\",\n",
+        "    },\n",
+        "    color_continuous_scale=\"bluered\",\n",
+        ")\n",
+        "fig.update_layout(\n",
+        "    width=1000,\n",
+        "    height=600,\n",
+        "    barmode=\"group\",\n",
+        "    yaxis_range=[0, 100],\n",
+        "    title=\"<b>Accuracy of different RAG configurations</b>\",\n",
+        "    xaxis_title=\"RAG settings\",\n",
+        "    font=dict(size=15),\n",
+        ")\n",
+        "fig.layout.yaxis.ticksuffix = \"%\"\n",
+        "fig.update_coloraxes(showscale=False)\n",
+        "fig.update_traces(texttemplate=\"%{y:.1f}\", textposition=\"outside\")\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "TaWGSkRm41bx"
       },
       "execution_count": null,
       "outputs": []
